--- a/IznajmiKniga/Base.lproj/Main.storyboard
+++ b/IznajmiKniga/Base.lproj/Main.storyboard
@@ -413,20 +413,46 @@
                         <color key="backgroundColor" red="0.92451652230000003" green="1" blue="0.59119082430000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="0.57541288859999995" green="0.1772988247" blue="0.12489494" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yHJ-hy-rH2">
-                            <size key="itemSize" width="50" height="50"/>
+                            <size key="itemSize" width="158" height="283"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="Cell" id="GGv-k4-GNg">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="Cell" id="GGv-k4-GNg" customClass="KnigaCollectionViewCell" customModule="IznajmiKniga" customModuleProvider="target">
+                                <rect key="frame" x="81" y="0.0" width="158" height="283"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="158" height="283"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vaE-ZC-MRx">
+                                            <rect key="frame" x="0.0" y="207" width="158" height="71"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="71" id="LnM-DT-V3V"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cXU-ey-uRP">
+                                            <rect key="frame" x="0.0" y="0.0" width="158" height="207"/>
+                                        </imageView>
+                                    </subviews>
                                 </view>
+                                <color key="backgroundColor" red="0.58446134520000004" green="0.62609191230000005" blue="0.37285682869999998" alpha="0.5354588468" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="cXU-ey-uRP" secondAttribute="trailing" id="4Vk-xQ-lD4"/>
+                                    <constraint firstAttribute="trailing" secondItem="vaE-ZC-MRx" secondAttribute="trailing" id="DPb-3W-GhP"/>
+                                    <constraint firstItem="cXU-ey-uRP" firstAttribute="leading" secondItem="GGv-k4-GNg" secondAttribute="leading" id="ENC-0E-xVe"/>
+                                    <constraint firstItem="cXU-ey-uRP" firstAttribute="top" secondItem="GGv-k4-GNg" secondAttribute="top" id="GKo-Gi-im1"/>
+                                    <constraint firstItem="vaE-ZC-MRx" firstAttribute="top" secondItem="cXU-ey-uRP" secondAttribute="bottom" id="Orm-j4-2jh"/>
+                                    <constraint firstAttribute="bottom" secondItem="vaE-ZC-MRx" secondAttribute="bottom" constant="5" id="dk7-6j-lHy"/>
+                                    <constraint firstItem="vaE-ZC-MRx" firstAttribute="leading" secondItem="GGv-k4-GNg" secondAttribute="leading" id="yIz-pg-QGZ"/>
+                                </constraints>
                                 <connections>
+                                    <outlet property="knigaImage" destination="cXU-ey-uRP" id="dEs-g3-4pd"/>
+                                    <outlet property="naslov" destination="vaE-ZC-MRx" id="Nm7-la-Bt9"/>
                                     <segue destination="FTh-NR-nTx" kind="show" identifier="detaliZaKniga" id="MOd-z4-GeA"/>
                                 </connections>
                             </collectionViewCell>
@@ -439,12 +465,12 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gdn-xd-CIZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1228" y="93"/>
+            <point key="canvasLocation" x="1226.25" y="92.957746478873247"/>
         </scene>
         <!--Detali Za Kniga View Controller-->
         <scene sceneID="mz7-pk-SZb">
             <objects>
-                <viewController id="FTh-NR-nTx" customClass="DetaliZaKnigaViewController" customModule="IznajmiKniga" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="detaliZaKniga" id="FTh-NR-nTx" customClass="DetaliZaKnigaViewController" customModule="IznajmiKniga" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nLW-KU-TvT">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
